# notas-musicais

./: .pyproject.toml.swo  .pyproject.toml.swp  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: escalas.md
src/notas_musicais/: __init__.py  acordes.py  cli.py  escalas.py
tests/: test_acordes.py  test_escala.py
